# GrantsWriter

./: .gitignore  LAFF_webpage_contents.txt  README.md  all_links.json  checkpoints.sqlite  main.py  main_clean.py  main_dirty.py  metrics.py  mini_agents_clean.py  mini_agents_dirty.py  pyproject.toml  rag _clean.py  rag.py  rag_clean.py  rag_dirty.py  scrap_contents.py  scrap_links.py  scraper.py  scraper_clean.py  scraper_dirty.py  snapshot.txt  snapshot_hist.txt  snapshots.txt  utilities_clean.py  utilities_dirty.py
