[project]
name = "grantswriter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.5",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.4",
    "langchain-google-genai>=3.0.3",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.3",
    "pydantic>=2.12.4",
]
