[project]
name = "grantswriter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "grandalf>=0.8",
    "ipython>=9.7.0",
    "langchain>=1.0.5",
    "langchain-chroma>=1.0.0",
    "langchain-cohere>=0.5.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.4",
    "langchain-google-genai>=3.0.3",
    "langchain-mistralai>=1.0.1",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.3",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "pillow>=12.0.0",
    "pydantic>=2.12.4",
    "requests>=2.32.5",
]
